# tori-lang

./: Cargo.toml  LICENSE  README.md  package-lock.json  package.json
docs/: index.html  main.js
src/: Compiler.js  Token.js  TypeChecker.js  ast.rs  bin.rs  generator.js  lexer.js  lexer.rs  lib.rs  main.js  main.rs  operator.rs  parser.js  parser.rs  repl.rs  reservedWords.js  token.rs
src/test/: TypeChecker.test.js  lexer.test.js  parser.test.js
