[package]
authors = ["Yuuki Toriyama <github@toriyama.dev>"]
categories = ["compilers"]
edition = "2021"
license = "MIT"
name = "tori-lang"
repository = "https://github.com/YUUKIToriyama/tori-lang"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "compiler"
path = "src/lib.rs"

[[bin]]
name = "repl"
path = "src/main.rs"

[dependencies]
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = "0.2.83"
